# stanford-cart

./: .gitignore  CONTEXT.md  README.md  WHAT_I_NEED.md
cart_ws/src/cart_bringup/: CMakeLists.txt  package.xml
cart_ws/src/cart_bringup/behavior_trees/: follow_gps_route.xml
cart_ws/src/cart_bringup/config/: cart.yaml  ekf.yaml  nav2_params.yaml
cart_ws/src/cart_bringup/launch/: cart.launch.py  dataset_replay.launch.py  dbw.launch.py  sensors.launch.py  teleop.launch.py  tf_static.launch.py
cart_ws/src/cart_dbw/: package.xml  setup.cfg  setup.py
cart_ws/src/cart_dbw/cart_dbw/: cmd_vel_to_dbw.py  mega_pedals_node.py  odrive_steering_node.py
cart_ws/src/cart_safety/: package.xml  setup.cfg  setup.py
cart_ws/src/cart_safety/cart_safety/: demo_runner.py  engage_button.py  perception_estop.py  safety_gate.py
cart_ws/src/cart_sensors/: package.xml  setup.cfg  setup.py
cart_ws/src/cart_sensors/cart_sensors/: dataset_playback_node.py  depth_anything_node.py  gps_mega_node.py  usb_camera_node.py
docker/: README.md  cart_deps.sh  enter.sh  launch.sh  setup_isaac_ros.sh
docs/: jetson_setup.md  runbook.md  v2_roadmap.md
modal_pipeline/: _extract_trajectories.py  _make_fake_nmea.py  process_route.py  run_isaac_ros.py
scripts/: record_nmea.py  record_route.sh  run_demo.sh  upload_to_modal.sh
