<?xml version="1.0"?>
<package format="3">
  <name>cart_dbw</name>
  <version>0.1.0</version>
  <description>Drive-by-wire bridges: ODrive steering + Mega pedal serial.</description>
  <maintainer email="team@stanford.edu">team</maintainer>
  <license>MIT</license>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
