<?xml version="1.0"?>
<package format="3">
  <name>cart_safety</name>
  <version>0.1.0</version>
  <description>Safety gate, perception e-stop fallback, demo runner.</description>
  <maintainer email="team@stanford.edu">team</maintainer>
  <license>MIT</license>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>geographic_msgs</exec_depend>
  <exec_depend>nav2_msgs</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
